# hydrotwin-os

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: rl_training_results.md
config/: default.yaml  prometheus.yml
demo/: demo_walkthrough.md  streamlit_app.py
demo/chrome_extension/: content.css  content.js  manifest.json  popup.html  popup.js
docs/: design_document.md
hydrotwin/: __init__.py  config.py  main.py
hydrotwin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hydrotwin/agent/: sac_agent.py  train.py
hydrotwin/api_clients/: __init__.py  electricity_maps.py  noaa_weather.py  wri_aqueduct.py
hydrotwin/compliance/: __init__.py  audit_trail.py  compliance_reporter.py  explainability.py  regulation_engine.py
hydrotwin/crew/: __init__.py  agents.py  crew.py  tasks.py
hydrotwin/dashboard/: api.py  server.py
hydrotwin/detection/: alert_engine.py  fusion_model.py  incident_tracker.py  sensor_detector.py  vision_detector.py
hydrotwin/env/: datacenter_env.py  reward_wrapper.py  scenarios.py
hydrotwin/events/: __init__.py  kafka_consumer.py  kafka_producer.py  schemas.py
models/: evaluations.npz  thermal_gnn.pth
scripts/: benchmark_rl.py  run_anomaly_node.py  run_live_datacenter.py  test_kafka_brutal.py  test_live_chaos.py  train_rl.py  train_thermal_gnn.py
tests/: test_api_clients.py  test_compliance.py  test_detection.py  test_environment.py  test_integration.py  test_migration.py  test_physics_twin.py  test_reward.py  test_rl_trained.py  test_stress_levels.py
(+20 files in other folders)
